<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:layout_below="@id/appbar"
        android:layout_marginLeft="@dimen/size_10dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:layout_marginRight="@dimen/size_10dp"
        android:gravity="start|top"
        android:text="@string/demo_title"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <www.mys.com.security.node.view.ItemView
                android:id="@+id/bank_card_bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_src="@drawable/ic_copy"
                app:item_title="@string/bank_card_bank_name" />

            <www.mys.com.security.node.view.ItemView
                android:id="@+id/bank_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_src="@drawable/ic_copy"
                app:item_title="@string/bank_card_number" />

            <www.mys.com.security.node.view.ItemView
                android:id="@+id/bank_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_src="@drawable/ic_copy"
                app:item_title="@string/bank_card_name" />

            <www.mys.com.security.node.view.ItemView
                android:id="@+id/bank_card_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_src="@drawable/ic_copy"
                app:item_title="@string/bank_card_pass" />

            <www.mys.com.security.node.view.ItemView
                android:id="@+id/bank_card_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_src="@drawable/ic_copy"
                app:item_title="@string/bank_card_branch" />

            <www.mys.com.security.node.view.ItemView
                android:id="@+id/bank_card_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_src="@drawable/ic_copy"
                app:item_title="@string/bank_card_phone" />

            <www.mys.com.security.node.view.ItemView
                android:id="@+id/bank_card_zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_src="@drawable/ic_copy"
                app:item_title="@string/bank_card_zip_code" />

            <www.mys.com.security.node.view.ItemView
                android:id="@+id/bank_card_swift_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_src="@drawable/ic_copy"
                app:item_title="@string/bank_card_swift_code" />

            <www.mys.com.security.node.view.ItemView
                android:id="@+id/bank_card_cnaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_src="@drawable/ic_copy"
                app:item_title="@string/bank_card_cnaps" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_save"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/size_20dp"
        android:layout_marginRight="@dimen/size_20dp"
        android:layout_marginBottom="@dimen/size_20dp"
        android:src="@drawable/ic_save"
        android:theme="@style/Theme.MaterialComponents"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_save"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />

    <include
        layout="@layout/common_loading"
        android:visibility="gone" />

</RelativeLayout>